--- a/practiceJpa/data-jpa/build.gradle
+++ b/practiceJpa/data-jpa/build.gradle
@@ -1,10 +1,10 @@
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.17'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'io.spring.dependency-management' version '1.1.4'
 }
 
-group = 'jpabook'
+group = 'study'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -23,23 +23,17 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-devtools'
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'	//junit 버전 차이로 인해 추가
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'	//junit 버전 차이로 인해 추가
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5'
 	
-}
-
-test {
- 	useJUnitPlatform()
 }
 
 tasks.named('test') {
