--- a/querydsl/src/main/resources/application.yml
+++ b/querydsl/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/jpashop
+    url: jdbc:h2:tcp://localhost/~/querydsl
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -12,11 +12,11 @@ spring:
       hibernate:
       # show_sql: true
         format_sql: true
-      # default_batch_fetch_size: 100
+        default_batch_fetch_size: 100
 
 logging.level:
   org.hibernate.SQL: debug
-# org.hibernate.type: trace #스프링 부트 2.x, hibernate5
+  org.hibernate.type: trace #스프링 부트 2.x, hibernate5
 # org.hibernate.orm.jdbc.bind: trace #스프링 부트 3.x, hibernate6
 
 
